// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShopifyIntegration/> render() should render a loader because the integration is loading 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="inner"
      style="min-height: 500px;"
    >
      <i
        class="icon-custom icon-circle-o-notch md-spin"
        style="font-size: 40px;"
      />
    </div>
  </div>
</div>
`;

exports[`<ShopifyIntegration/> render() should render an integration with a delete button that deletes the integration 1`] = `
<div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert loading mb-4"
        >
          <div
            class="iconContainer"
          >
            <span
              class="loadingIcon"
            >
              <svg
                class="LoadingSpinner--spinner--a8Lrf LoadingSpinner--dark--7oiyy LoadingSpinner--small--Fokyx"
                preserveAspectRatio="xMidYMid meet"
                role="status"
                viewBox="0 0 20 20"
              >
                <circle
                  class="LoadingSpinner--dot--tnzt_"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <circle
                  class="LoadingSpinner--circle--OnNzl"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <span
                  class="sr-only"
                >
                  Loading...
                </span>
              </svg>
            </span>
          </div>
          <div
            class="content"
          >
            <span
              class="label"
            >
              Import in progress. We typically sync 3,000 customers an hour. We will send you an email once it is done. Feel free to leave this page.
            </span>
          </div>
        </div>
        <form>
          <label
            class="Label--label--QAnfT Label--isDisabled--cM4ye mb-2"
            for="disabled-store-field"
          >
            Store name
          </label>
          <span
            class="mb-4 wrapper group horizontal"
          >
            <div
              class="wrapper left isDisabled isNested"
            >
              <input
                class="input"
                disabled=""
                id="disabled-store-field"
                name="store-name"
                type="text"
                value=""
              />
            </div>
            <span
              class="groupAddon right isDisabled"
            >
              .myshopify.com
            </span>
          </span>
          <div
            class="mb-4"
          >
            <div>
              <label
                aria-checked="true"
                class="Label--label--QAnfT label"
                for="sync_customer_notes"
                role="switch"
              >
                <input
                  checked=""
                  class="input"
                  disabled=""
                  id="sync_customer_notes"
                  name="sync_customer_notes"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
                Synchronize customer notes between Gorgias and Shopify
              </label>
              <div
                class="caption caption"
              >
                When editing notes in both places at the same time, the first one saved will be synchronized.
                <br />
                Notes will not be synchronized for customers who are associated with more than one Shopify store.
              </div>
            </div>
          </div>
          <div
            class="mb-4"
          >
            <div>
              <label
                aria-checked="false"
                class="Label--label--QAnfT label"
                for="default_address_phone_matching_enabled"
                role="switch"
              >
                <input
                  class="input"
                  disabled=""
                  id="default_address_phone_matching_enabled"
                  name="default_address_phone_matching_enabled"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
                Match customer by Shopify default address phone number
              </label>
              <div
                class="caption caption"
              >
                Gorgias will search for Shopify customer’s default address for customer matching.
                <br />
                <b>
                  Do not enable if you use the same phone number across multiple customers
                </b>
                , as this will lead to incorrect customer merges.
              </div>
            </div>
          </div>
          <div>
            <button
              aria-disabled="true"
              class="wrapper mr-2 fill primary medium isDisabled"
              type="submit"
            >
              <span>
                Update Connection
              </span>
            </button>
            <button
              aria-disabled="false"
              class="wrapper float-right fill destructive medium"
              id="integration-deletion-confirm-button"
              type="button"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete App
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ShopifyIntegration/> render() should render an integration with a delete button that deletes the integration 2`] = `
[
  [
    Immutable.Map {},
  ],
]
`;

exports[`<ShopifyIntegration/> render() when enabling DSA phone matching, should send all the integration meta after asking for confirmation 1`] = `
[
  [
    Immutable.Map {
      "meta": Immutable.Map {
        "sync_customer_notes": false,
        "default_address_phone_matching_enabled": true,
      },
    },
  ],
]
`;

exports[`<ShopifyIntegration/> render() when not enabling DSA phone matching, should send all the integration meta without asking for confirmation 1`] = `
[
  [
    Immutable.Map {
      "meta": Immutable.Map {
        "sync_customer_notes": false,
        "default_address_phone_matching_enabled": false,
      },
    },
  ],
]
`;
